# Blazor

./: .gitignore
src/DNA/: dna.sln
src/DNA/native/: CMakeLists.txt  build.sh  dna.vcxproj  dna.vcxproj.filters
src/DNA/native/src/: CLIFile.c  Compat.h  MetaData.c  MetaDataTables.h  MetaData_Search.c  System.IO.FileInternal.c  Type.c
